# stream-lit-app

ScholarPathAI/ScholarPathAI/: app.py  pyproject.toml
ScholarPathAI/ScholarPathAI/components/: bottom_menu.py
ScholarPathAI/ScholarPathAI/data/: citations.csv  projects.csv  settings.json
ScholarPathAI/ScholarPathAI/pages/: 0_Login.py  1_Profile.py  2_Projects.py  3_Citations.py  4_Analysis.py  5_Reports.py  6_AI_Chat.py  7_Settings.py
ScholarPathAI/ScholarPathAI/utils/: analysis.py  report_generator.py  research_tools.py  storage.py
